# rylan-unifi-case-study

./: .agent.md  .bandit  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .shellcheckrc  .yamllint  CHANGELOG.md  CLOUDKEY-INTEGRATION-COMPLETE.md  COMMIT-MESSAGE.md  CONSCIOUSNESS.md  ITERATION-PROXMOX-IGNITE-V2.instructions.md  LICENSE  LORE.md  README.md  ROADMAP.md  TRINITY-V4-FINAL-SUMMARY.md  beale-report-1765842274.json  eternal-resurrect.sh  fix_fences.py  gatekeeper.sh  normalized_files.txt  pyproject.toml  pyproject.toml.bak2  pyproject.toml.bak3  repo_structure.md  repo_structure.txt  requirements-dev.txt  requirements.txt  sc1091-files.txt  sc1091-occurrences.txt  shellcheck-beale-harden-post.txt  shellcheck-beale-harden-post2.txt  shellcheck-beale-harden-post3.txt  shellcheck-beale-harden.txt  shellcheck-eternal-resurrect-unifi-final.txt  shellcheck-eternal-resurrect-unifi-final2.txt  shellcheck-eternal-resurrect-unifi-final3.txt  shellcheck-eternal-resurrect-unifi-final4.txt  (+18 more)
.audit/bandit/: README.txt  archive_dirs.txt  bandit_guardian_stderr.txt  bandit_ini_stdout.json  bandit_results.json  bandit_stdout.json  bandit_verbose.txt  dir_structure_grep.txt  excludes.txt  git_status.txt  ls_top.txt
.audit/bandit-remediation/: bandit-final.json  bandit-report.json
.audit/ci-green-remediation/: PUSH_LOG_20251216_211943.md
.audit/gatekeeper/: README.md  gatekeeper-latest.json  gatekeeper-latest.json.bak2  gatekeeper-latest.tmp.json  shfmt-diff.txt
.audit/mypy-remediation/: FOLLOW-UP-TASKS.md  error-distribution.txt  error-types.txt  unifi_rogue_handler.py.pre-types
.githooks/: post-commit  post-merge  pre-commit  prepare-commit-msg
.github/: copilot-instructions.md
.github/agents/: README.md  SUMMON-MAPPING.md  all-seeing-eye.agent.md  bauer-eternal  bauer-eternal.agent.md  bauer-veil.agent.md  bauer-verifier.agent.md  beale-awakened.agent.md  carter-eternal.agent.md  eye-namer.agent.md  gatekeeper-eternal.agent.md  holy-scholar.agent.md  lorek-archivist.agent.md  sir-lorek.agent.md  whitaker-red.agent.md
.github/baselines/: README.md
.github/instructions/: Instruction-set-eternal.instructions.md  carter-instructions.md
.github/workflows/: agent-health.yml  beale-ci-limitation.md  beale-validate.yml  ci-proxmox-ignite.yaml  (+7 more)
.venv-stubs/: pyvenv.cfg
01-bootstrap/: 00-eternal-first-login.sh  HOMOGENEITY.md  adopt-devices.py  install-unifi-controller.sh  install-unifi.ps1  install-unifi.sh  netplan-rylan-dc.yaml  validate-rylan-dc.sh  vlan-stubs.json
01_bootstrap/: 00-eternal-first-login.sh  HOMOGENEITY.md  adopt-devices-wrapper.sh  adopt_devices.py  adopt_devices.py.pre-surgical  backup-orchestrator.sh  install-unifi-controller.sh  install-unifi.sh  samba-provision.sh  setup-nfs-kerberos.sh  validate-rylan-dc.sh
02-declarative-config/: apply-wrapper.sh  apply.py  config.gateway.json  policy-table-rylan-v5.json  policy-table.yaml  qos-smartqueue.yaml  switch-profiles.yaml  vlans.yaml
02_declarative_config/: README.md  apply-wrapper.sh  apply.py  firewall-rules.yaml  policy-table.consolidated.yaml  policy-table.yaml  switch-profiles-iot.yaml  vlans.yaml
03-validation-ops/: README.md  backup-cron.sh  phone-reg-test.py  validate-bauer-eternal.sh  validate-isolation.sh
03_validation_ops/: README.md  backup-cron.sh  check-critical-services.sh  orchestrator.sh  phone_reg_test.py  validate-bauer-eternal.sh  validate-isolation.sh
04-cloudkey-migration/: eternal-cloudkey-ignition.sh  post-adoption-hardening.sh
04_cloudkey_migration/: README.md  eternal-cloudkey-ignition.sh  post-adoption-hardening.sh
05-network-migration/: migrate.sh  rollback.sh
05_network_migration/: README.md  migrate.sh  rollback.sh
06_device_config/: README.md
app/: __init__.py  exceptions.py  guardrails.py  redactor.py  redactor.py.pre-surgical  redactor.py.pre-types
bootstrap/: netplan-rylan-dc.yaml  pxe-light-dnsmasq.conf  pxe-light.service  samba-dc-provision.sh  samba-dc-test.ps1  tftpboot-setup.sh  unifi-docker-compose.yml
compose_templates/: README.md
docs/: CONSCIOUSNESS-IMMUTABILITY.md  DEVICE-PASSPORT-IMPLEMENTATION.md  DOCTRINE-LINE-LIMIT-ANALYSIS.md  ENCODING-VERIFICATIONS.md  FreeRadius Production Server.txt  GAP-CLOSURE-SUMMARY.md  GROK-LEO-PROMPT.md  HARDENING-TICKETS.md  LINE-LIMIT-DOCTRINE.md  PHASE-3-TESTING-REPORT.md  PHASE-4-COMPLETION-SUMMARY.md  PHASE-4-HALFWAY-STATUS.md  PHASE-4-REFACTORING-ROADMAP.md  PHASE-4-STATUS-FINAL.md  TRINITY-DEPLOYMENT.md  VALIDATION-REPORT.md  adr-001-policy-over-fw.md  architecture-v5.mmd  dr-drill.md  freepbx-macvlan-setup.md  guide.md  ha-backup-scaling-guide.md  hardware-inventory.md  inventory-iot.md  kernel-tuning-guide.md  migration-runbook.md  nfs-security-guide.md  troubleshooting.md  unifi-controller-2025.md
guardian/: audit-eternal.py  audit_eternal.py
scripts/: README.md  auto-fix-naming.sh  bauer-glow-up.sh  bauer-status.sh  beale-drift-detect.sh  beale-harden.sh  canonical-backup-clarification.sh  canonical-backup.handler.sh  carter-status.sh  ci-validate-beale-report.sh  complete-headers.sh  consciousness-guardian.sh  debug-api.sh  diagnose-bandit.sh  enhance-cable-passport.sh  eternal-resurrect-unifi.sh  gatekeeper-logger.sh  gatekeeper-migrate-logs.sh  generate-all-passports.sh  generate-ap-passport.sh  generate-cable-passport.sh  generate-certificate-passport.sh  generate-network-passport.sh  generate-recovery-key-vault.sh  generate-runbook-index.sh  generate-ups-passport.sh  guardian-bauer.sh  guardian-carter.sh  guardian-eye.sh  guardian-gatekeeper.sh  guardian-namer.sh  guardian-veil.sh  header-cleanup.sh  header-hygiene.sh  ignite.sh  install-git-hooks.sh  install-pre-commit.sh  install-type-stubs.sh  new-heresy.sh  query-gatekeeper-logs.sh  (+10 more)
shared/: __init__.py  auth.py  inventory.yaml  unifi_client.py
templates/: heresy-wrapper.sh
tests/: __init__.py  main.py  test_auth.py  test_bootstrap.py  test_coverage_gaps.py  test_exceptions_behavior.py  test_guardrails_behavior.py  test_redactor.py  test_redactor_extended.py  test_triage.py  test_unifi_client.py
(+207 files in other folders)
